@@ -28,6 +28,8 @@
 
 #include "bitstream.h"
 
+#define DEFAULT_BUFSIZE (16)
+
 BitStream *BitStream_new(void)
 {
 	BitStream *bstream;
@@ -36,49 +38,38 @@ BitStream *BitStream_new(void)
 	if(bstream == NULL) return NULL;
 
 	bstream->length = 0;
-	bstream->data = NULL;
+	bstream->data = (unsigned char *)malloc(DEFAULT_BUFSIZE);
+	if(bstream->data == NULL) {
+		free(bstream);
+		return NULL;
+	}
+	bstream->datasize = DEFAULT_BUFSIZE;
 
 	return bstream;
 }
 
-static int BitStream_allocate(BitStream *bstream, int length)
+static int BitStream_expand(BitStream *bstream)
 {
 	unsigned char *data;
 
-	if(bstream == NULL) {
-		return -1;
-	}
-
-	data = (unsigned char *)malloc(length);
+	data = (unsigned char *)realloc(bstream->data, bstream->datasize * 2);
 	if(data == NULL) {
 		return -1;
 	}
 
-	if(bstream->data) {
-		free(bstream->data);
-	}
-	bstream->length = length;
 	bstream->data = data;
+	bstream->datasize *= 2;
 
 	return 0;
 }
 
-static BitStream *BitStream_newFromNum(int bits, unsigned int num)
+static void BitStream_writeNum(unsigned char *dest, int bits, unsigned int num)
 {
 	unsigned int mask;
 	int i;
 	unsigned char *p;
-	BitStream *bstream;
 
-	bstream = BitStream_new();
-	if(bstream == NULL) return NULL;
-
-	if(BitStream_allocate(bstream, bits)) {
-		BitStream_free(bstream);
-		return NULL;
-	}
-
-	p = bstream->data;
+	p = dest;
 	mask = 1 << (bits - 1);
 	for(i=0; i<bits; i++) {
 		if(num & mask) {
@@ -89,26 +80,15 @@ static BitStream *BitStream_newFromNum(int bits, unsigned int num)
 		p++;
 		mask = mask >> 1;
 	}
-
-	return bstream;
 }
 
-static BitStream *BitStream_newFromBytes(int size, unsigned char *data)
+static void BitStream_writeBytes(unsigned char *dest, int size, unsigned char *data)
 {
 	unsigned char mask;
 	int i, j;
 	unsigned char *p;
-	BitStream *bstream;
 
-	bstream = BitStream_new();
-	if(bstream == NULL) return NULL;
-
-	if(BitStream_allocate(bstream, size * 8)) {
-		BitStream_free(bstream);
-		return NULL;
-	}
-
-	p = bstream->data;
+	p = dest;
 	for(i=0; i<size; i++) {
 		mask = 0x80;
 		for(j=0; j<8; j++) {
@@ -121,72 +101,57 @@ static BitStream *BitStream_newFromBytes(int size, unsigned char *data)
 			mask = mask >> 1;
 		}
 	}
-
-	return bstream;
 }
 
 int BitStream_append(BitStream *bstream, BitStream *arg)
 {
-	unsigned char *data;
-
 	if(arg == NULL) {
 		return -1;
 	}
 	if(arg->length == 0) {
 		return 0;
 	}
-	if(bstream->length == 0) {
-		if(BitStream_allocate(bstream, arg->length)) {
-			return -1;
-		}
-		memcpy(bstream->data, arg->data, arg->length);
-		return 0;
+
+	while(bstream->length + arg->length > bstream->datasize) {
+		BitStream_expand(bstream);
 	}
 
-	data = (unsigned char *)malloc(bstream->length + arg->length);
-	if(data == NULL) {
-		return -1;
-	}
-	memcpy(data, bstream->data, bstream->length);
-	memcpy(data + bstream->length, arg->data, arg->length);
-
-	free(bstream->data);
+	memcpy(bstream->data + bstream->length, arg->data, arg->length);
 	bstream->length += arg->length;
-	bstream->data = data;
 
 	return 0;
 }
 
 int BitStream_appendNum(BitStream *bstream, int bits, unsigned int num)
 {
-	BitStream *b;
 	int ret;
 
 	if(bits == 0) return 0;
 
-	b = BitStream_newFromNum(bits, num);
-	if(b == NULL) return -1;
+	while(bstream->datasize - bstream->length < bits) {
+		ret = BitStream_expand(bstream);
+		if(ret < 0) return ret;
+	}
+	BitStream_writeNum(bstream->data + bstream->length, bits, num);
+	bstream->length += bits;
 
-	ret = BitStream_append(bstream, b);
-	BitStream_free(b);
-
-	return ret;
+	return 0;
 }
 
 int BitStream_appendBytes(BitStream *bstream, int size, unsigned char *data)
 {
-	BitStream *b;
 	int ret;
 
 	if(size == 0) return 0;
 
-	b = BitStream_newFromBytes(size, data);
-	if(b == NULL) return -1;
+	while(bstream->datasize - bstream->length < size * 8) {
+		ret = BitStream_expand(bstream);
+		if(ret < 0) return ret;
+	}
+	BitStream_writeBytes(bstream->data + bstream->length, size, data);
+	bstream->length += size * 8;
 
-	ret = BitStream_append(bstream, b);
-	BitStream_free(b);
-
-	return ret;
+	return 0;
 }
 
 unsigned char *BitStream_toByte(BitStream *bstream)
